Them du lieu, search, filter cho trang su co

--- a/nhom6/charts.html
+++ b/nhom6/charts.html
@@ -219,7 +219,7 @@
                   </li>
                 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fe fe-file-text"></i> Cài đặt</a>
+                    <a href="setup.html" class="nav-link"><i class="fe fe-file-text"></i> Cài đặt</a>
                   </li>
                 </ul>
               </div>
@@ -237,7 +237,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Employment Growth</h3>
+                    <h3 class="card-title">Số lượng sự cố hàng năm</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-employment" style="height: 16rem"></div>
@@ -290,7 +290,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Monthly Average Temperature</h3>
+                    <h3 class="card-title">Số lượng sự cố hàng tháng</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-temperature" style="height: 16rem"></div>
@@ -341,7 +341,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Số lượng sự cố tuần này</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-area" style="height: 16rem"></div>
@@ -391,7 +391,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Số lượng sự cố tuần trước</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-area-spline" style="height: 16rem"></div>
@@ -441,7 +441,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Số lượng sự cố 2 tuần trước</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-area-spline-sracked" style="height: 16rem"></div>
@@ -494,7 +494,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Wind speed during two days</h3>
+                    <h3 class="card-title">Sự cố khắc phục</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-spline" style="height: 16rem"></div>
@@ -545,7 +545,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Sự cố điện</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-spline-rotated" style="height: 16rem"></div>
@@ -596,7 +596,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">sự cố đường dây</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-step" style="height: 16rem"></div>
@@ -646,7 +646,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Sự cố cây cối</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-area-step" style="height: 16rem"></div>
@@ -696,7 +696,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Thống kê loại sự cố theo ngày</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-bar" style="height: 16rem"></div>
@@ -749,7 +749,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Thống kê loại sự cố theo ngày (view ngang)</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-bar-rotated" style="height: 16rem"></div>
@@ -803,7 +803,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Thống kê loại sự cố theo ngày</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-bar-stacked" style="height: 16rem"></div>
@@ -859,7 +859,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Nguyên nhân</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-pie" style="height: 16rem"></div>
@@ -910,7 +910,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">Phục hồi</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-donut" style="height: 16rem"></div>
@@ -955,7 +955,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Lorem ipsum</h3>
+                    <h3 class="card-title">sự cố hành lang</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-scatter" style="height: 16rem"></div>
@@ -1005,7 +1005,7 @@
               <div class="col-lg-6 col-xl-4">
                 <div class="card">
                   <div class="card-header">
-                    <h3 class="card-title">Combination chart</h3>
+                    <h3 class="card-title">Tiến độ</h3>
                   </div>
                   <div class="card-body">
                     <div id="chart-combination" style="height: 16rem"></div>
