--- a/nhom6/index.html
+++ b/nhom6/index.html
@@ -225,7 +225,7 @@
                   </li>
                 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"><i class="fe fe-file-text"></i> Cài đặt</a>
+                    <a href="setup.html" class="nav-link"><i class="fe fe-file-text"></i> Cài đặt</a>
                   </li>
                 </ul>
               </div>
