--- a/nhom6/lichsu.html
+++ b/nhom6/lichsu.html
@@ -194,13 +194,13 @@
 
           
                   <li class="nav-item">
-                    <a href="./index.html" class="nav-link"><i class="fe fe-home"></i> Trang chủ</a>
+                    <a href="./index.html" class="nav-link"><i class="fe fe-home"></i> Tổng quan sự cố</a>
                   </li>
                  <!--  <li class="nav-item">
                     <a href="#"class="nav-link"><i class="fe fe-box"></i> Tổng quan</a>                  
                   </li> -->
                   <li class="nav-item dropdown">
-                    <a href="./suco.html" class="nav-link"><i class="fe fe-calendar"></i> Tổng quan sự cố <span style="color: red">&ensp;(84)</span></a>
+                    <a href="./suco.html" class="nav-link"><i class="fe fe-calendar"></i> Danh sách sự cố <span style="color: red">&ensp;(84)</span></a>
                     
                   </li>
                   <li class="nav-item dropdown">
